# cata

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  ast.cpp  ast.h  astprinter.cpp  astprinter.h  codegen.cpp  codegen.h  fmt.h  main.cpp  parser.cpp  parser.h  program.cata  program.txt  token.cpp  token.h  tokenizer.cpp  tokenizer.h
ir/: clean.sh  compile.sh  lib.c
